--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="module" src="index.js"></script>
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>おみくじ</title>
 </head>
 
 <body>
-  <h1 id="message"></h1>
+  <button id="button">おみくじをひく！</button>
+  <h1 id="unse"></h1>
+  <p id="message"></p>
 </body>
 
 </html>
